# libs

./: .gitignore  CMakeLists.txt  README.md  libs.c  libs.geany
buttons/: CMakeLists.txt  buttons.c
flash/: flash.c  flash.h
ili9341/: ili9341.c  ili9341.h
sound/: CMakeLists.txt  sound.c  sound.h
st7735/: st7735.c  st7735.h
